--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,20 @@
-/* .product-cont{
+.product-cont{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-} */
+}
+
+@media only screen and (max-width: 768px){
+    .product-cont{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+    }
+}
+@media only screen and (min-width: 769px) and (max-width: 1024px){
+    .product-cont{
+        display: grid;
+        grid-template-columns:  repeat(2, 1fr);
+        grid-gap: 10px;
+    }
+}
